--- a/_posts/2018-07-27-입력예외처리.md
+++ b/_posts/2018-07-27-입력예외처리.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "입력 예외 처리"
+title: "[Programming] C와 C++ 입력 예외 처리"
 date: 2018-07-27
 excerpt: "std::cin 과 scanf() 의 입력 예외 처리 하기"
 tags: [C, C++]
