--- a/_posts/2018-08-03-가비지컬렉터.md
+++ b/_posts/2018-08-03-가비지컬렉터.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "[Programming] "
+title: "[Programming] 가비지 컬렉터"
 date: 2018-08-03
-excerpt: "가비지 컬렉터"
+excerpt: "가비지 컬렉터에 관하여"
 tags: [Programming]
 comments: false
 ---
@@ -46,3 +46,5 @@ C언어나 C++등의 Native 언어가 아닌 Java나 C#등의 Managed 언어는 
   * 메모리 해제는 자동으로 일어나지만 이는 가비지에 한해서만 이다
   * 가비지라고 판단을 못할경우, 해제해야하는 메모리지만 해제하지 못해 메모리 누수가 발생
   어디선가 반환되어야 하는 메모리를 의도치 않게 참조하고 있는 경우가 있을수 있다
+
+언제나 느끼지만 메모리관리는 참으로 어려운거 같다...
