--- a/_posts/2018-08-03-가비지컬렉터(유니티).md
+++ b/_posts/2018-08-03-가비지컬렉터(유니티).md
@@ -1,9 +1,10 @@
----
+
+ ---
 layout: post
-title: "[Programming] 가비지 컬렉터"
+title: "[Unity] 가비지 컬렉터"
 date: 2018-08-03
-excerpt: "가비지 컬렉터에 관하여"
-tags: [Programming]
+excerpt: "Unity의 가비지 컬렉터에 관하여"
+tags: [Unity]
 comments: false
 ---
 
@@ -15,6 +16,8 @@ C언어나 C++등의 Native 언어가 아닌 Java나 C#등의 Managed 언어는 
 이러한 가비지 컬렉터는 호출 시점을 프로그래머가 알수 없다. 자동으로 호출되는 구조이기에
 가비지 컬렉터로 인한 성능저하를 막기위해서는 가비지(수집될 메모리)를 최대한 만들지 않는게
 좋다.
+
+이번에는 유니티의 가비지 컬렉터에 대해서 알아보려고 한다.(정확히는 C#의 가비지 컬렉터)
 
 가비지 컬렉터는 어떤방식으로 가비지를 수집할까?
 
