--- a/_posts/2018-08-02-코루틴.md
+++ b/_posts/2018-08-02-코루틴.md
@@ -28,6 +28,8 @@ comments: false
 다음 진입점이 된다. 이것이 무슨말이냐면, yield return 부분부터 다음호출이 시작된다는 것이다.
 > ex) yield return new WaitForSeconds(time); 은 time이라는 시간을 기다린후 진입이란 뜻
 
+yield return 으로 코루틴을 리턴하면 해당 작업을 기다린뒤 뒤 작업을 수행한다.
+
 이러한 코루틴은 주로 유니티에서의 애니메이션 처리나 지연 연산등에 이용한다. 그 외에도
 코루틴의 특성은 많은곳에서 활용할수 있을것이다.
 
