--- a/_posts/2018-07-29-SOLID-객체지향-5대원칙.md
+++ b/_posts/2018-07-29-SOLID-객체지향-5대원칙.md
@@ -3,9 +3,10 @@ layout: post
 title: "[전산학] 객체지향의 5대 원칙 (SOLID)"
 date: 2018-07-29
 excerpt: "객체지향의 5대 원칙에 관하여"
-tags: [C, C++]
+tags: [Programming]
 comments: false
 ---
+
 #객체지향의 5대 원칙
 
 예전에 '제5원소' 라는 영화를 본적이 있다. 최근 그와 관련된 인터넷 짤을 보게 되어 갑자기 떠오른게
