--- a/_posts/2018-08-12-캐스팅연산자.md
+++ b/_posts/2018-08-12-캐스팅연산자.md
@@ -3,7 +3,7 @@ layout: post
 title: "[Programming] 캐스팅연산자"
 date: 2018-08-12
 excerpt: "C++에서 등장한 캐스팅연산자들에 관하여"
-tags: [Programming]
+tags: [C, C++]
 comments: false
 ---
 
