--- a/_posts/2019-04-13-안드로이드-앱간-데이터공유.md
+++ b/_posts/2019-04-13-안드로이드-앱간-데이터공유.md
@@ -20,7 +20,7 @@ priority : 1.0
 
 Give and Take 라는 말이 있다. 주는 녀석이 있으면 받는 녀석도 있지 않을까? 그녀석이 바로 ContentResolver라는 녀석이다. ContentResolver는 객체이다. URI로 데이터를 제공받을 ContentProvider를 찾아서 접근에 관한 결과를 리턴받는다. 아래는 이 과정을 도식화 한것이다.
 
-![external](/assets/img/datashare/cp.png)
+![cp](/assets/img/datashare/cp.png)
 [출처 : Rhyshan, https://rhyshan.com/493]
 
 App의 디비에서 ContentProvider를 이용하여 특정 데이터를 제공하고 있다. ContentProvider는 자신의 URI를 가지고 있고 ContentResolver는 이 URI를 이용하여 ContentProvider를 찾아가는 것이다.
