--- a/_posts/2018-07-31-프로세스와-쓰레드.md
+++ b/_posts/2018-07-31-프로세스와-쓰레드.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[전산학] 프로세스와 쓰레드"
+title: "[전산학] 운영체제(OS) - 프로세스와 쓰레드"
 date: 2018-07-31
 excerpt: "프로세스와 쓰레드의 차이"
 tags: [전산학]
