--- a/_posts/2019-03-18-HTTP-패킷.md
+++ b/_posts/2019-03-18-HTTP-패킷.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Network] HTTP 패킷"
+title: "[Network] 네트워크기초 - HTTP 패킷"
 date: 2019-03-17
 excerpt: "HTTP(S) 프로토콜의 데이터 구조, 패킷에 관하여."
 tags: [Network]
