--- a/_posts/2019-03-25-메모리-단편화.md
+++ b/_posts/2019-03-25-메모리-단편화.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[전산학] 메모리 단편화(Fragmentation)"
+title: "[전산학] 컴퓨터구조 - 메모리 단편화(Fragmentation)"
 date: 2019-03-25
 excerpt: "메모리 단편화에 관하여"
 tags: [Programming]
