[update] post update

--- a/_posts/2018-08-03-가비지컬렉터(C#).md
+++ b/_posts/2018-08-03-가비지컬렉터(C#).md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "[Unity] 가비지 컬렉터"
+title: "[Programming] 가비지 컬렉터"
 date: 2018-08-03
-excerpt: "Unity의 가비지 컬렉터에 관하여"
-tags: [Unity]
+excerpt: ".Net환경(C#)의 가비지 컬렉터에 관하여"
+tags: [Programming]
 comments: false
 sitemap :
 changefreq : daily
@@ -19,7 +19,7 @@ C언어나 C++등의 Native 언어가 아닌 Java나 C#등의 Managed 언어는 
 가비지 컬렉터로 인한 성능저하를 막기위해서는 가비지(수집될 메모리)를 최대한 만들지 않는게
 좋다.
 
-이번에는 유니티의 가비지 컬렉터에 대해서 알아보려고 한다.(정확히는 C#의 가비지 컬렉터)
+이번에는 가비지 컬렉터에 대해서 알아보려고 한다.(정확히는 C#의 가비지 컬렉터)
 
 가비지 컬렉터는 어떤방식으로 가비지를 수집할까?
 
