[update] post update

--- a/_posts/2018-08-03-가비지컬렉터(C#).md
+++ b/_posts/2018-08-03-가비지컬렉터(C#).md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Programming] 가비지 컬렉터"
+title: "[Programming] 가비지 컬렉터 (C#)"
 date: 2018-08-03
 excerpt: ".Net환경(C#)의 가비지 컬렉터에 관하여"
 tags: [Programming]
