--- a/_posts/2019-02-15-가비지컬렉터(Android).md
+++ b/_posts/2019-02-15-가비지컬렉터(Android).md
@@ -12,14 +12,14 @@ priority : 1.0
 
 ## 가비지 컬렉터
 
- 이전에(2018-08-03-가비지컬렉터(유니티))와 관련된 포스팅을 한적이 있다.
+ 이전에(2018-08-03-가비지컬렉터(C#))와 관련된 포스팅을 한적이 있다.
 이번에는 JAVA, 안드로이드 에서의 가비지 컬렉터는 무엇이 다를까 적어보려 한다.
 과연 어떤 차이가 있을까?
 
 사실 의미상의 차이는 없다. 가비지(사용되지 않는, 참조되지 않는 메모리)를
 컬렉팅(수집, 회수후 해제)해주는 것이다.
 
-유니티에서 처럼 참조루트로 관리하여, 루트에서부터 참조 되지 않는 객체들은 수집대상이다.
+C# 처럼 참조루트로 관리하여, 루트에서부터 참조 되지 않는 객체들은 수집대상이다.
 ![rootHeap](/assets/img/javaGC/rootHeap.png)
 [출처 : 금광캐는광부 tistory, https://itmining.tistory.com/24]
 참조루트(Root Set of References)에서 부터 탐색되지 않는 노드(객체)들은 finalize()를
